--- a/package.json
+++ b/package.json
@@ -37,5 +37,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
+    "@types/react-datepicker": "^2.11.1",
+    "@types/react-dom": "^16.9.8",
+    "typescript": "^3.9.5"
   }
 }
