--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-hotkeys": "^2.0.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
